Added global cache (per-job & per-branch)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,12 @@ stages:
   - build_remote
   - deploy
 
+cache: &global_cache
+  key: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
+  paths:
+    - *
+  policy: pull-push
+
 pre_init:
   stage: pre_init
   image: alpine
@@ -23,6 +29,8 @@ pre_init:
     - triggers
     - web
     - merge_requests
+  cache:
+    <<: *global_cache
 
 build_frontend:
   stage: build
@@ -51,6 +59,8 @@ build_frontend:
     - triggers
     - web
     - merge_requests
+  cache:
+    <<: *global_cache
   needs:
     - pre_init
 
@@ -81,6 +91,8 @@ build_backend:
     - triggers
     - web
     - merge_requests
+  cache:
+    <<: *global_cache
   needs:
     - pre_init
 
@@ -111,6 +123,8 @@ build_mongo-seeder:
     - triggers
     - web
     - merge_requests
+  cache:
+    <<: *global_cache
   needs:
     - pre_init
 
