--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 cache: &global_cache
   key: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
   paths:
-    - *
+    - frontend/
   policy: pull-push
 
 pre_init:
