--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,36 +1,10 @@
 stages:
-  - pre_init
   - build
   - build_remote
   - deploy
 
-cache: &global_cache
-  key: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
-  paths:
-    - frontend/
-  policy: pull-push
-
-pre_init:
-  stage: pre_init
-  image: alpine
-  before_script:
-    - apk update && apk add git
-  script:
-    - git submodule update --init --recursive
-    - git submodule update --recursive --remote
-  only:
-    - branches
-    - tags
-    - api
-    - external
-    - pipelines
-    - pushes
-    - schedule
-    - triggers
-    - web
-    - merge_requests
-  cache:
-    <<: *global_cache
+variables:
+  GIT_SUBMODULE_STRATEGY: recursive
 
 build_frontend:
   stage: build
@@ -59,10 +33,6 @@ build_frontend:
     - triggers
     - web
     - merge_requests
-  cache:
-    <<: *global_cache
-  needs:
-    - pre_init
 
 build_backend:
   stage: build
@@ -91,10 +61,6 @@ build_backend:
     - triggers
     - web
     - merge_requests
-  cache:
-    <<: *global_cache
-  needs:
-    - pre_init
 
 build_mongo-seeder:
   stage: build
@@ -123,10 +89,6 @@ build_mongo-seeder:
     - triggers
     - web
     - merge_requests
-  cache:
-    <<: *global_cache
-  needs:
-    - pre_init
 
 build_remote:
   stage: build_remote
