Moved backend files to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "frontend"]
 	path = frontend
 	url = https://gitlab.com/sakul6499.de/frontend.git
+[submodule "backend"]
+	path = backend
+	url = https://gitlab.com/sakul6499.de/backend.git
