Added mongo-seeder to .gitmodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "backend"]
 	path = backend
 	url = https://gitlab.com/sakul6499.de/backend.git
+[submodule "mongo-seeder"]
+	path = mongo-seeder
+	url = https://gitlab.com/sakul6499.de/mongo-seeder.git
