--- a/themes/aether/package.json
+++ b/themes/aether/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.2",
   "private": true,
   "devDependencies": {
+    "bulma": "0.8.2",
     "grunt": "1.1.0",
     "grunt-contrib-clean": "0.5.0",
     "grunt-contrib-copy": "0.4.1",
     "grunt-git": "1.0.14",
     "load-grunt-tasks": "5.1.0",
-    "bulma": "0.8.2",
     "node-sass": "4.13.1"
+  },
+  "dependencies": {
+    "bulma-tooltip": "^3.0.2"
   }
 }
