Cleaned theme config

--- a/themes/aether/_config.yml
+++ b/themes/aether/_config.yml
@@ -6,16 +6,6 @@ menu:
 # Content
 excerpt_link: Read More
 
-# display widgets at the bottom of index pages (pagination == 2)
-index_widgets:
-# - category
-# - tagcloud
-# - archive
-
-# widget behavior
-archive_type: 'monthly'
-show_count: false
-
 # Favicon
 favicon: /favicon.ico
 
@@ -31,12 +21,7 @@ disqus_shortname: sakul6499
 # Google Analytics
 google_analytics: UA-160626331-1
 
-# Search
-search:
-  path: search.xml
-  field: post
-  content: true
-
+# Profile links
 profile:
   gitlab: https://gitlab.com/Sakul6499
   github: https://github.com/Sakul6499
