Corrected gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,6 +44,7 @@ merge:
 trigger_config:
   stage: trigger
   only:
-    - jenkins.config.yml
-    - Jenkinsfile
+    changes:
+      - jenkins.config.yml
+      - Jenkinsfile
   trigger: sakul6499.de/jenkins-configuration
