--- a/themes/aether/_config.yml
+++ b/themes/aether/_config.yml
@@ -29,6 +29,7 @@ google_analytics: UA-160626331-1
 
 # Profile links
 profile:
+  gitea: https://git.sakul6499.de/
   gitlab: https://gitlab.com/Sakul6499
   github: https://github.com/Sakul6499
   bitbucket: https://bitbucket.org/%7Be556a531-5d5f-4ab9-a76d-bfc3043af83f%7D/
