--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".\\redirects\\GitLab"]
 	path = .\\redirects\\GitLab
 	url = https://gitlab.com/Sakul6499/sakul6499.gitlab.io.git
+[submodule ".\\redirects\\GitHub"]
+	path = .\\redirects\\GitHub
+	url = https://github.com/Sakul6499/sakul6499.github.io.git
