--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".\\redirects\\GitHub"]
 	path = .\\redirects\\GitHub
 	url = https://github.com/Sakul6499/sakul6499.github.io.git
+[submodule ".\\redirects\\BitBucket"]
+	path = .\\redirects\\BitBucket
+	url = https://sakul6499@bitbucket.org/sakul6499/sakul6499.bitbucket.io.git
