--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
   
 pages:
   stage: build
-  image: node:10.15.3
+  image: node:latest
   cache:
     paths:
       - node_modules/
@@ -25,7 +25,7 @@ pages:
 
 merge:
   stage: merge
-  image: node:10.15.3
+  image: node:latest
   cache:
     paths:
       - node_modules/
