--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
   - build
   
-pages:
+build:
   stage: build
   image: node:latest
   cache:
@@ -35,5 +35,8 @@ merge:
     - cd ../..
     - yarn install
     - hexo generate
+  artifacts:
+    paths:
+      - public
   only:
     - merge_requests
