--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
   - build
   
-build:
+pages:
   stage: build
   image: node:latest
   cache:
@@ -18,6 +18,8 @@ build:
   artifacts:
     paths:
       - public
+  only:
+    - master
 
 merge:
   stage: build
