--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,9 @@ pages:
     paths:
       - node_modules/
   script:
-    - cd themes/aether && npm install
+    - cd themes/aether/
+    - npm install
+    - cd ../../
     - npm install
     - npm run build
   artifacts:
