Wrote backend post

--- a/Rocket.toml
+++ b/Rocket.toml
@@ -1,3 +1,5 @@
+[global]
+template_dir = "template"
+
 [global.databases]
-sqlite_logs = { url = "logs.sqlite" }
 postgres_postgres = { url = "postgres://postgres:postgres@localhost:5432/postgres" }
