--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,4 @@ dotenv = "0.15"
 [dependencies.rocket_contrib]
 version = "0.4.5"
 default-features = false
-features = ["diesel_sqlite_pool", "diesel_postgres_pool", "json"]
+features = ["diesel_postgres_pool", "json", "tera_templates", "serve"]
