--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,20 +1,175 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "Hexo Clean & Generate",
-            "type": "shell",
-            "command": "hexo clean; hexo generate",
-            "group": "build",
-            "problemMatcher": []
-        },
-        {
-            "label": "Hexo Server",
-            "type": "shell",
-            "command": "hexo server",
-            "group": "test"
-        }
-    ]
+  // See https://go.microsoft.com/fwlink/?LinkId=733558
+  // for the documentation about the tasks.json format
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "Build Workspace",
+      "type": "shell",
+      "command": "cargo build --workspace",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Build Server",
+      "type": "shell",
+      "command": "cargo build --package server",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Build Import",
+      "type": "shell",
+      "command": "cargo build --package import",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Build Data",
+      "type": "shell",
+      "command": "cargo build --package data",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Build Release Workspace",
+      "type": "shell",
+      "command": "cargo build --release --workspace",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Build Release Server",
+      "type": "shell",
+      "command": "cargo build --release --package server",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Build Release Import",
+      "type": "shell",
+      "command": "cargo build --release --package import",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Build Release Data",
+      "type": "shell",
+      "command": "cargo build --release --package data",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Check Workspace",
+      "type": "shell",
+      "command": "cargo check --workspace",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Check Server",
+      "type": "shell",
+      "command": "cargo check --package server",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Check Import",
+      "type": "shell",
+      "command": "cargo check --package import",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Check Data",
+      "type": "shell",
+      "command": "cargo check --package data",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Build Docs Workspace",
+      "type": "shell",
+      "command": "cargo doc --workspace",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Build Docs Server",
+      "type": "shell",
+      "command": "cargo doc --package server",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Build Docs Import",
+      "type": "shell",
+      "command": "cargo doc --package import",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Build Docs Data",
+      "type": "shell",
+      "command": "cargo doc --package data",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Clean Workspace",
+      "type": "shell",
+      "command": "cargo clean",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Clean Server",
+      "type": "shell",
+      "command": "cargo clean --package server",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Clean Import",
+      "type": "shell",
+      "command": "cargo clean --package import",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Clean Data",
+      "type": "shell",
+      "command": "cargo clean --package data",
+      "group": "build",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Test Workspace",
+      "type": "shell",
+      "command": "cargo test --workspace",
+      "group": "test",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Test Server",
+      "type": "shell",
+      "command": "cargo test --package server",
+      "group": "test",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Test Import",
+      "type": "shell",
+      "command": "cargo test --package import",
+      "group": "test",
+      "problemMatcher": ["$rustc"]
+    },
+    {
+      "label": "Test Data",
+      "type": "shell",
+      "command": "cargo test --package data",
+      "group": "test",
+      "problemMatcher": ["$rustc"]
+    }
+  ]
 }
