--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -16,6 +16,7 @@ log = "0.4"
 dotenv = "0.15"
 walkdir = "2"
 toml = "0.5"
+pulldown-cmark = "0.7"
 
 [dependencies.rocket_contrib]
 version = "0.4.5"
