--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -10,13 +10,14 @@ rocket = "0.4.5"
 serde = "1.0"
 serde_json = "^1.0"
 serde_derive = "^1.0"
-diesel = { version = "^1.4", features = ["postgres"] }
+diesel = { version = "^1.4", features = ["postgres", "chrono"] }
 diesel_migrations = "^1.4"
 log = "0.4"
 dotenv = "0.15"
 walkdir = "2"
 toml = "0.5"
 pulldown-cmark = "0.7"
+chrono = { version = "0.4", features = ["serde"] }
 
 [dependencies.rocket_contrib]
 version = "0.4.5"
