--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "redirects/BitBucket"]
 	path = redirects/BitBucket
 	url = https://sakul6499@bitbucket.org/sakul6499/sakul6499.bitbucket.io.git
+[submodule "static/bulma"]
+	path = static/bulma
+	url = https://github.com/jgthms/bulma.git
+[submodule "static/bulma-tooltip"]
+	path = static/bulma-tooltip
+	url = https://github.com/CreativeBulma/bulma-tooltip.git
