--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,44 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "Run importer",
+      "type": "shell",
+      "command": "${workspaceFolder}/target/debug/import",
+      "options": {
+        "env": {
+          "POSTS_PATH": "./posts/"
+        },
+        "cwd": "${workspaceFolder}"
+      },
+      "dependsOn": [
+        "Build Import"
+      ]
+    },
+    {
+      "label": "Build Server",
+      "dependsOn": [
+        "Build ClientLib",
+        "Build SASS",
+        "Build only Server",
+        "Run importer"
+      ],
+      "problemMatcher": [
+        "$rustc"
+      ]
+    },
+    {
+      "label": "Build ClientLib",
+      "type": "shell",
+      "command": "wasm-pack build --no-typescript --target web --out-dir ../static/client_lib",
+      "group": "build",
+      "options": {
+        "cwd": "./client_lib"
+      },
+      "problemMatcher": [
+        "$rustc"
+      ]
+    },
+    {
       "label": "Build SASS",
       "type": "shell",
       "command": "sass style.sass style.css",
@@ -18,168 +56,216 @@
       "type": "shell",
       "command": "cargo build --workspace",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
-      "label": "Build Server",
+      "label": "Build only Server",
       "type": "shell",
       "command": "cargo build --package server",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Build Import",
       "type": "shell",
       "command": "cargo build --package import",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Build Data",
       "type": "shell",
       "command": "cargo build --package data",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Build Release Workspace",
       "type": "shell",
       "command": "cargo build --release --workspace",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Build Release Server",
       "type": "shell",
       "command": "cargo build --release --package server",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Build Release Import",
       "type": "shell",
       "command": "cargo build --release --package import",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Build Release Data",
       "type": "shell",
       "command": "cargo build --release --package data",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Check Workspace",
       "type": "shell",
       "command": "cargo check --workspace",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Check Server",
       "type": "shell",
       "command": "cargo check --package server",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Check Import",
       "type": "shell",
       "command": "cargo check --package import",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Check Data",
       "type": "shell",
       "command": "cargo check --package data",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Build Docs Workspace",
       "type": "shell",
       "command": "cargo doc --workspace",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Build Docs Server",
       "type": "shell",
       "command": "cargo doc --package server",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Build Docs Import",
       "type": "shell",
       "command": "cargo doc --package import",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Build Docs Data",
       "type": "shell",
       "command": "cargo doc --package data",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Clean Workspace",
       "type": "shell",
       "command": "cargo clean",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Clean Server",
       "type": "shell",
       "command": "cargo clean --package server",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Clean Import",
       "type": "shell",
       "command": "cargo clean --package import",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Clean Data",
       "type": "shell",
       "command": "cargo clean --package data",
       "group": "build",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Test Workspace",
       "type": "shell",
       "command": "cargo test --workspace",
       "group": "test",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Test Server",
       "type": "shell",
       "command": "cargo test --package server",
       "group": "test",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Test Import",
       "type": "shell",
       "command": "cargo test --package import",
       "group": "test",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     },
     {
       "label": "Test Data",
       "type": "shell",
       "command": "cargo test --package data",
       "group": "test",
-      "problemMatcher": ["$rustc"]
+      "problemMatcher": [
+        "$rustc"
+      ]
     }
   ]
 }
