Changed binary name from SASS to SASSC

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -44,7 +44,7 @@
     {
       "label": "Build SASS",
       "type": "shell",
-      "command": "sass style.sass style.css",
+      "command": "sassc style.sass style.css",
       "group": "build",
       "options": {
         "cwd": "${workspaceFolder}/static"
