--- a/server/Rocket.toml
+++ b/server/Rocket.toml
@@ -3,3 +3,10 @@ template_dir = "../template"
 
 [global.databases]
 postgres_postgres = { url = "postgres://postgres:postgres@localhost:5432/postgres" }
+
+[production]
+address = "0.0.0.0"
+port = 8000
+keep_alive = 5
+log = "critical"
+limits = { forms = 32768 }
