--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,11 @@ stages:
 build:
   image: rust
   stage: build
+  variables:
+    GIT_SUBMODULE_STRATEGY: recursive
   before_script:
+    - git submodule sync --recursive
+    - git submodule update --init --recursive
     - rustup update nightly
     - rustup default nightly
   script:
@@ -18,7 +22,11 @@ build:
 build-docs:
   image: rust
   stage: build
+  variables:
+    GIT_SUBMODULE_STRATEGY: recursive
   before_script:
+    - git submodule sync --recursive
+    - git submodule update --init --recursive
     - rustup update nightly
     - rustup default nightly
   script:
@@ -30,7 +38,11 @@ build-docs:
 test:
   image: rust
   stage: test
+  variables:
+    GIT_SUBMODULE_STRATEGY: recursive
   before_script:
+    - git submodule sync --recursive
+    - git submodule update --init --recursive
     - rustup update nightly
     - rustup default nightly
   script:
@@ -45,11 +57,13 @@ build-docker-server:
   services:
     - docker:19.03.12-dind
   variables:
-    # Use TLS https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#tls-enabled
+    GIT_SUBMODULE_STRATEGY: recursive
     DOCKER_HOST: tcp://docker:2376
     DOCKER_TLS_CERTDIR: "/certs"
     IMAGE: "$CI_REGISTRY_IMAGE/server"
   before_script:
+    - git submodule sync --recursive
+    - git submodule update --init --recursive
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
     - docker pull $IMAGE:latest || true
@@ -63,11 +77,13 @@ build-docker-importer:
   services:
     - docker:19.03.12-dind
   variables:
-    # Use TLS https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#tls-enabled
+    GIT_SUBMODULE_STRATEGY: recursive
     DOCKER_HOST: tcp://docker:2376
     DOCKER_TLS_CERTDIR: "/certs"
     IMAGE: "$CI_REGISTRY_IMAGE/importer"
   before_script:
+    - git submodule sync --recursive
+    - git submodule update --init --recursive
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
     - docker pull $IMAGE:latest || true
