--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,7 +59,7 @@ build-docker-server:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
     - docker pull $IMAGE:latest || true
-    - docker build --cache-from $IMAGE:latest --tag $IMAGE:$CI_COMMIT_SHA --tag $IMAGE:latest -f docker/server/Dockerfile .
+    - docker build --cache-from $IMAGE:latest --tag $IMAGE:$CI_COMMIT_SHA --tag $IMAGE:latest --tag $IMAGE:$CI_COMMIT_BRANCH -f docker/server/Dockerfile .
     - docker push $IMAGE:$CI_COMMIT_SHA
     - docker push $IMAGE:latest
 
@@ -77,6 +77,6 @@ build-docker-importer:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
     - docker pull $IMAGE:latest || true
-    - docker build --cache-from $IMAGE:latest --tag $IMAGE:$CI_COMMIT_SHA --tag $IMAGE:latest -f docker/import/Dockerfile .
+    - docker build --cache-from $IMAGE:latest --tag $IMAGE:$CI_COMMIT_SHA --tag $IMAGE:latest --tag $IMAGE:$CI_COMMIT_BRANCH -f docker/import/Dockerfile .
     - docker push $IMAGE:$CI_COMMIT_SHA
     - docker push $IMAGE:latest
