--- a/ansible/playbooks/04_docker.yml
+++ b/ansible/playbooks/04_docker.yml
@@ -19,7 +19,7 @@
     - name: Importer container
       docker_container:
         name: website_importer
-        image: registry.gitlab.com/sakul6499_de/sakul6499_de.gitlab.io/importer
+        image: registry.gitlab.com/sakul6499_de/sakul6499_de.gitlab.io/importer:master
         restart: yes
         recreate: yes
         pull: yes
