--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -133,6 +133,9 @@ deploy:
   stage: deploy
   image: ubuntu
   before_script:
+    - apt update
+    - apt install -y ssh python3 python3-pip
+    - pip3 install ansible
     - eval $(ssh-agent -s)
     - mkdir -p ~/.ssh
     - chmod 0700 ~/.ssh
@@ -141,8 +144,6 @@ deploy:
     - ssh-add ~/.ssh/id_rsa
     - ssh-add -L
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-    - apt-get update && apt-get install -y python3 python3-pip
-    - pip3 install ansible
   script:
     - ansible-playbook -i inventory.conf playbooks/00_main.yml
   only:
