--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -134,7 +134,7 @@ deploy:
   image: ubuntu
   before_script:
     - apt update
-    - apt install -y ssh python3 python3-pip
+    - DEBIAN_FRONTEND="noninteractive" apt install -y ssh python3 python3-pip
     - pip3 install ansible
     - eval $(ssh-agent -s)
     - mkdir -p ~/.ssh
