Corrected ansible playbooks

--- a/ansible/Makefile
+++ b/ansible/Makefile
@@ -1,3 +1,10 @@
+COMMAND = ansible-playbook 
+INVENTORY = -i inventory.conf
+PLAYBOOK = playbooks/00_main.yml
+
 # For vault use '-e @vault/file.yml'
 run: 
-	ansible-playbook -i inventory.conf playbooks/00_main.yml
+	$(COMMAND) $(INVENTORY) $(PLAYBOOK)
+
+debug: 
+	$(COMMAND) -vvv $(INVENTORY) $(PLAYBOOK)
