Added wait task for PSQL to ansible deployment

--- a/ansible/playbooks/04_docker.yml
+++ b/ansible/playbooks/04_docker.yml
@@ -16,6 +16,10 @@
         state: started
         env:
           POSTGRES_PASSWORD: postgres
+    - name: Wait for PostgreSQL to fully start-up
+      wait_for:
+        timeout: 30
+      delegate_to: localhost
     - name: Importer container
       docker_container:
         name: website_importer
