--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,8 @@ build:
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
   before_script:
+    - ls -al target/
+    - du -sh target/
     - rustup update nightly
     - rustup default nightly
   script:
