--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -143,22 +143,4 @@ build-docker-importer:
 
 deploy:
   stage: deploy
-  image: ubuntu
-  before_script:
-    - apt update
-    - DEBIAN_FRONTEND="noninteractive" apt install -y ssh python3 python3-pip
-    - pip3 install ansible
-    - eval $(ssh-agent -s)
-    - mkdir -p ~/.ssh
-    - chmod 0700 ~/.ssh
-    - echo "$PRIVATE_KEY" > ~/.ssh/id_rsa
-    - chmod 0600 ~/.ssh/id_rsa
-    - ssh-add ~/.ssh/id_rsa
-    - ssh-add -L
-    - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-  script:
-    - ansible-playbook -i ansible/inventory.conf ansible/playbooks/00_main.yml
-  only:
-    - master
-    - schedules
-    - web
+  trigger: sakul6499_de/aether
