--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "static/bulma"]
-	path = static/bulma
+[submodule "style/bulma"]
+	path = style/bulma
 	url = https://github.com/jgthms/bulma.git
-[submodule "static/bulma-tooltip"]
-	path = static/bulma-tooltip
+[submodule "style/bulma-tooltip"]
+	path = style/bulma-tooltip
 	url = https://github.com/CreativeBulma/bulma-tooltip.git
